# OOP_TinyProject

./: CMakeLists.txt  LinearRegression.cpp  LinearSystem.cpp  LinearSystem.h  Matrix.cpp  Matrix.h  ProjectReport.md  README.md  Vector.cpp  Vector.h  main.cpp
